--- a/_includes/base/footer.html
+++ b/_includes/base/footer.html
@@ -1,52 +1,67 @@
 <footer id="footer" class="footer-inverse" role="contentinfo">
 	<div id="footer-inner">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-sm-3">
-					<div class="widget">
-						<div class="corporate-widget">
-																<div class="row">
-																										<div class="col-md-12" style="height:100px;">
-																										<a class="text-uppercase" href="/" title="Athletes In Action"> <img class="img-responsive" src="/images/athletesinaction-home.svg" alt="AIA" width="180px" height="68px"></a><!-- End .footer-logo -->                                                    </div>
-																										<div class="col-md-12">
-								<p>Our mission is to build spiritual movements everywhere through the platform of sports so that everyone knows someone who truly follows Jesus.</p>
-																											<address>© <script>document.write(new Date().getFullYear());</script> <br>651 Taylor Drive Xenia, OH 45385<br> 937.352.1000</address>
-																											
-								
-																										</div>
-																									</div>  
-																</div><!-- End corporate-widget -->
-												</div><!-- End .widget -->
-								</div><!-- End .col-md-3 -->
-				<div class="col-md-offset-6 col-md-3">
-					<div class="widget">
-						<h4>AIA Links</h4>
-						<ul class="links">
-																									<li><a href="http://athletesinaction.org"><i class="fa fa-angle-right"></i>AthletesInAction.org</a></li>
-							<li><a href="http://woodenfamilyfieldhouse.com"><i class="fa fa-angle-right"></i>Wooden Family Fieldhouse</a></li>
-							<li><a href="http://aiasportscomplex.com"><i class="fa fa-angle-right"></i>Sports Complex and Retreat Center</a></li>
-																									<li><a href="http://goaia.org/campus"><i class="fa fa-angle-right"></i>Find AIA on Campus</a></li>
-							<li><a href="http://teamblogs.athletesinaction.org"><i class="fa fa-angle-right"></i>AIA Team Blogs</a></li>
-						</ul>
-					</div>
-																		<span class="social-icons-label">Find Us at:</span>
-																		<div class="social-icons">
-																						<a href="http://facebook.com/athletesinaction" class="social-icon icon-facebook" title="Facebook"> 
-																										<i class="fa fa-facebook"></i> </a> 
-																						<a href="http://twitter.com/aiausa" class="social-icon icon-twitter" title="Twitter"> 
-																										<i class="fa fa-twitter"></i> </a> 
-																									<a href="https://plus.google.com/+athletesinaction" class="social-icon icon-google-plus" title="Google Plus"> 
-																										<i class="fa fa-google-plus"></i> </a> 
-																			
-																						</div><!-- End .social-icons --><!-- End .widget -->
-				</div><!-- End .col-md-3 -->
-				<div class="clearfix visible-sm"></div><!-- End .clearfix -->
-				<div class="col-md-3 col-sm-6">
-				</div><!-- End .col-md-3 -->
-				<div class="col-md-3 col-sm-6">
-				</div><!-- End .col-md-3 -->
-			</div><!-- End .row -->
-		</div><!-- End .container -->
+		<div class="max-width">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-3 col-sm-3">
+						<div class="widget">
+							<div class="corporate-widget">
+								<div class="row">
+									<div class="col-md-12" style="height:100px;">
+										<a class="text-uppercase" href="/" title="Athletes In Action"> <img class="img-responsive"
+												src="/images/athletesinaction-home.svg" alt="AIA" width="180px" height="68px"></a>
+										<!-- End .footer-logo -->
+									</div>
+									<div class="col-md-12">
+										<p>Our mission is to build spiritual movements everywhere through the platform of sports so that
+											everyone knows someone who truly follows Jesus.</p>
+										<address>©
+											<script>document.write(new Date().getFullYear());</script> <br>651 Taylor Drive Xenia, OH
+											45385<br>
+											937.352.1000</address>
+
+
+									</div>
+								</div>
+							</div><!-- End corporate-widget -->
+						</div><!-- End .widget -->
+					</div><!-- End .col-md-3 -->
+					<div class="col-md-offset-6 col-md-3">
+						<div class="widget">
+							<h4>AIA Links</h4>
+							<ul class="links">
+								<li><a href="http://athletesinaction.org"><i class="fa fa-angle-right"></i>AthletesInAction.org</a></li>
+								<li><a href="http://woodenfamilyfieldhouse.com"><i class="fa fa-angle-right"></i>Wooden Family
+										Fieldhouse</a></li>
+								<li><a href="http://aiasportscomplex.com"><i class="fa fa-angle-right"></i>Sports Complex and Retreat
+										Center</a></li>
+								<li><a href="http://goaia.org/campus"><i class="fa fa-angle-right"></i>Find AIA on Campus</a></li>
+								<li><a href="https://goaia.org/opportunity/blog/"><i class="fa fa-angle-right"></i>AIA Team Blogs</a>
+								</li>
+								<li><a href="https://goaia.org/privacy"><i class="fa fa-angle-right"></i>Privacy Policy</a></li>
+							</ul>
+						</div>
+						<span class="social-icons-label">Find Us at:</span>
+						<div class="social-icons">
+							<a href="http://facebook.com/athletesinaction" class="social-icon icon-facebook" title="Facebook">
+								<i class="fa fa-facebook"></i> </a>
+							<a href="http://twitter.com/aiausa" class="social-icon icon-twitter" title="Twitter">
+								<i class="fa fa-twitter"></i> </a>
+							<a href="https://plus.google.com/+athletesinaction" class="social-icon icon-google-plus"
+								title="Google Plus">
+								<i class="fa fa-google-plus"></i> </a>
+
+						</div><!-- End .social-icons -->
+						<!-- End .widget -->
+					</div><!-- End .col-md-3 -->
+					<div class="clearfix visible-sm"></div><!-- End .clearfix -->
+					<div class="col-md-3 col-sm-6">
+					</div><!-- End .col-md-3 -->
+					<div class="col-md-3 col-sm-6">
+					</div><!-- End .col-md-3 -->
+				</div><!-- End .row -->
+			</div><!-- End .container -->
+		</div>
 	</div><!-- End #footer-inner -->
 </footer>
 
@@ -74,22 +89,23 @@
 <!--[if lt IE 9]>
 <script src="/Core/Shapes/scripts/html5.js" type="text/javascript"></script>
 <![endif]-->
-    
-    <!-- Google Analytics -->
-		<script>
-				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-				ga('create', 'UA-3428289-5', 'auto');
-				ga('send', 'pageview');
+<!-- Google Analytics -->
+<script>
+	(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-				</script>
+	ga('create', 'UA-3428289-5', 'auto');
+	ga('send', 'pageview');
+
+</script>
 <!-- End Google Analytics -->
 
 
-<script>(function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);</script> 
+<script>(function (d) { d.className = "dyn" + d.className.substring(6, d.className.length); })(document.documentElement);</script>
 <script>window.isRTL = false;</script>
-<!--<script type="text/javascript">_satellite.pageBottom();</script>-->
-
+<script type="text/javascript">_satellite.pageBottom();</script>
